# MSM-Nti-OJT

./: Install_vsomeip_PC.md  Readme.md
Task 1/: How_SOME-IP_works.md  System_requirements .md
Task-1/: README.md  System_requirements .md
Task-2/: QNX-Hi-World.md  README.md  SOME-IP_SIQ.md
Task-3/: README.md
Task-4/: Install_Run_vsomeip_Rpi4.md  README.md  msm-client.json  msm-vsomeip-app_0.1.bb  vsomeip_git.bb
Task-5/: CMakeLists.txt  README.md  msm-service.json
Task-6/: README.md  capicxx-core-runtime_git.bb  capicxx-someip-runtime_git.bb  qnx_capicxx_core_fix_build.patch  qnx_capicxx_someip_fix_build.patch
